--- a/web/css/win.css
+++ b/web/css/win.css
@@ -602,6 +602,124 @@ ul.boxy li {
     margin: 0px; 
 }
 
+.overlay_dialog {
+  background-color: #666666;
+  filter:alpha(opacity=60);
+  -moz-opacity: 0.6;
+  opacity: 0.6;
+}
+
+.overlay___invisible__ {
+  background-color: #666666;
+  filter:alpha(opacity=0);
+  -moz-opacity: 0;
+  opacity: 0;
+}
+
+.dialog_nw {
+  width: 9px;
+  height: 23px;
+}
+
+.dialog_n {
+  height: 23px;
+}
+
+.dialog_ne {
+  width: 9px;
+  height: 23px;
+}
+
+.dialog_e {
+  width: 2px;
+}
+
+.dialog_w {
+  width: 2px;
+}
+
+.dialog_sw {
+  width: 9px;
+  height: 19px;
+}
+
+.dialog_s {
+  height: 19px;
+}
+
+.dialog_se {
+  width: 9px;
+  height: 19px;
+}
+
+.dialog_sizer {
+  width: 9px;
+  height: 19px;
+  background: transparent url(default/sizer.gif) no-repeat 0 0;  
+  cursor:se-resize;  
+}
+
+.dialog_close {
+  width: 14px;
+  height: 14px;
+  background: transparent url(default/close.gif) no-repeat 0 0;      
+  position:absolute;
+  top:5px;
+  left:8px;
+  cursor:pointer;
+  z-index:2000;
+}
+
+.dialog_minimize {
+  width: 14px;
+  height: 15px;
+  background: transparent url(default/minimize.gif) no-repeat 0 0;      
+  position:absolute;
+  top:5px;
+  left:28px;
+  cursor:pointer;
+  z-index:2000;
+}
+
+.dialog_maximize {
+  width: 14px;
+  height: 15px;
+  background: transparent url(default/maximize.gif) no-repeat 0 0;      
+  position:absolute;
+  top:5px;
+  left:49px;
+  cursor:pointer;
+  z-index:2000;
+}
+
+.dialog_title {
+  float:left;
+  height:14px;
+  font-size:12px;
+  text-align:center;
+  width:100%;
+  color:#000;
+}
+
+.dialog_content {
+  overflow:auto;
+  color: #DDD;
+  font-family: Tahoma, Arial, sans-serif;
+  font-size: 10px;
+  background-color: #eee;
+}
+
+.top_draggable, .bottom_draggable {
+  cursor:move;
+}
+
+.status_bar {
+  font-size:12px;
+}
+.status_bar input{
+  font-size:12px;
+}
+
 .dialog {
   position: absolute;
   background: #cccccc;
@@ -612,3 +730,26 @@ ul.boxy li {
   opacity: 0.85;
   z-index: 300;
 }
+
+/* DO NOT CHANGE THESE VALUES*/
+.dialog {
+  display: block;
+  position: absolute;
+}
+
+.dialog table.table_window  { 
+  border-collapse: collapse; 
+  border-spacing: 0; 
+  width: 100%;
+  margin: 0px;
+  padding:0px;
+}
+
+.dialog table.table_window td , .dialog table.table_window th { 
+  padding: 0; 
+}
+
+.dialog .title_window {
+  -moz-user-select:none;
+}
+
