--- a/web/css/win.css
+++ b/web/css/win.css
@@ -29,7 +29,7 @@ A.NotBold:hover {color: #003399; font-weight: normal; text-decoration: underline
 
 /* PAGE TITLE */
 .PageTitle, .PageTitleBar, .PageTitleBar td {font-size: 17px; color: #ffffff; font-weight: bold; background-color: #CCCCCC;}
-.PageTitleBar a, .PageTitleBar td a{color: #9f3c00;}
+.PageTitleBar a, .PageTitleBar td a{color: #FFFFFF;}
 .PageTitleGroupBg, .PageTitleRoleBg, .PageTitleUserBg {background-color: #E5E5E5;}
 .PageTitleServerBg {background-color: #E4F2E4;}
 .PageTitlePlatformBg {background-color: #F2EAE4;}
