--- a/web/css/win.css
+++ b/web/css/win.css
@@ -781,3 +781,58 @@ ul.boxy li {
    border-width        : 1px 0px 1px 0px;
 }
 
+.resource {
+width:60%;
+padding-top:3px;
+padding-bottom:3px;
+padding-left:3px;
+border-bottom:1px solid #D5D8DE;
+}
+
+.availability {
+width:10%;
+padding-top:3px;
+padding-bottom:3px;
+border-bottom:1px solid #D5D8DE;
+text-align:center;
+}
+
+.alerts {
+width:10%;
+padding-top:3px;
+padding-bottom:3px;
+border-bottom:1px solid #D5D8DE;
+text-align:center;
+}
+
+.oob {
+width:10%;
+padding-top:3px;
+padding-bottom:3px;
+padding-right:3px;
+border-bottom:1px solid #D5D8DE;
+text-align:center;
+}
+
+.resourceName {
+width:50%;
+padding-top:3px;
+padding-bottom:3px;
+padding-left:3px;
+border-bottom:1px solid #D5D8DE;
+}
+.resourceTypeName {
+width:20%;
+padding-top:3px;
+padding-bottom:3px;
+padding-left:3px;
+border-bottom:1px solid #D5D8DE;
+
+}
+.throughput {
+width:10%;
+padding-top:3px;
+padding-bottom:3px;
+border-bottom:1px solid #D5D8DE;
+text-align:center;
+}
