--- a/web/css/win.css
+++ b/web/css/win.css
@@ -836,3 +836,13 @@ padding-bottom:3px;
 border-bottom:1px solid #D5D8DE;
 text-align:center;
 }
+
+.metricName {
+width:20%;
+padding-top:3px;
+padding-bottom:3px;
+padding-right:3px;
+border-bottom:1px solid #D5D8DE;
+text-align:center;
+text-wrap:none;
+}
