--- a/web/css/win.css
+++ b/web/css/win.css
@@ -867,18 +867,20 @@ border-bottom:1px solid #D5D8DE;
 text-align:center;
 }
 
-#section #testlist { 
+#section #order { 
   list-style-type:none;
   margin:0;
   margin-right: 5px;
   padding:0;
 }
 
-#section #testlist li {
+#order #order li {
   font:13px Verdana;
   margin:0;
   padding:4px;
   cursor:move;
+   list-style-type:none;
+  
 }
    
 .escTbl {
@@ -887,7 +889,7 @@ text-align:center;
   margin-bottom:10px;
 }
    
-#testlist li {
+#order li {
    list-style: none; 
    width: 100%;
    border-bottom:1px solid gray;
