--- a/web/css/win.css
+++ b/web/css/win.css
@@ -878,7 +878,6 @@ text-align:center;
   font:13px Verdana;
   margin:0;
   padding:4px;
-  cursor:move;
    list-style-type:none;
    list-style: none; 
    width: 100%;
@@ -896,3 +895,8 @@ text-align:center;
   margin-right:10px;
 }
 
+.escInput {
+ font:13px Verdana;
+ margin:0;
+  width: 100%;
+}
