--- a/web/css/win.css
+++ b/web/css/win.css
@@ -24,8 +24,21 @@ A.NotBold:hover, .DropDown A:hover {color: #003399; font-weight: normal; text-de
 .BoldText {font-weight: bold;}
 
 /* BUTTON */
-.Button { background-repeat: repeat-x; }
+.Button { font-weight: bold; background-repeat: repeat-x; }
 .Button A:hover { color: #C6CFE5; text-decoration: none; } 
+
+input.CompactButton, input.CompactButtonInactive {
+    color: #366CD9;
+    padding: 2px 3px 0px 3px;
+    background-color: #ffffff;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 9px;
+}
+
+input.CompactButtonInactive {
+    color: #CCCCCC;
+}
 
 /* LOGO */
 .logo{background-color: #b4b4b4;}
