--- a/web/css/win.css
+++ b/web/css/win.css
@@ -88,11 +88,11 @@ A.ListHeaderLink:hover {color: #004680; text-decoration: underline;}
 .ListRowSelected, .tableRowAction, .tableRowOdd {text-align: left; background-color: #EBEDF2;}
 
 .ListCell, .ListCellSelected, .tableCell, .redTableCell {padding: 3px; border-bottom: solid #D5D8DE; border-width: 1px; vertical-align: middle; }
-.ListCellSmall8 {font-size: 8px; border-width: 1px; border-bottom: solid #D5D8DE; border-width: 1px; padding: 3px;}
-.ListCellSmall10 {font-size: 10px; border-width: 1px; border-bottom: solid #D5D8DE; border-width: 1px; padding: 3px;}
-.ListCellSmall12 {font-size: 12px; border-width: 1px; border-bottom: solid #D5D8DE; border-width: 1px; padding: 3px;}
-.ListCellNoPadding {padding: 1px; border-bottom: solid #D5D8DE; border-width: 1px;}
-.ListCellCheckbox {padding: 0px; border-bottom: solid #D5D8DE; border-width: 1px; text-align: center; vertical-align: middle; }
+.ListCellSmall8 {font-size: 8px; border-bottom: 1px solid #D5D8DE; padding: 3px;}
+.ListCellSmall10 {font-size: 10px; border-bottom: 1px solid #D5D8DE; padding: 3px;}
+.ListCellSmall12 {font-size: 12px; border-bottom: 1px solid #D5D8DE; padding: 3px;}
+.ListCellNoPadding {padding: 1px; border-bottom: 1px solid #D5D8DE;}
+.ListCellCheckbox {padding: 0px; border-bottom: 1px solid #D5D8DE; text-align: center; vertical-align: middle; }
 .ListCellCheckboxSelected {padding: 0px; background-color: #E6EEFF; border-bottom: solid #D5D8DE; border-width: 1px;} /* only in RolePermissionsForm.jsp*/
 .ListCellSelected, .tableCellAction {background-color: #E6EEFF;} /* only in RolePermissionsForm.jsp*/
 .ListCellCheckAll {padding: 3px; font-size: 11px; font-weight: bold;} /* Edit Role page, RolePermissionsForm.jsp */
